# sfml-misc

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
src/: colors.pini  context.cpp  context.hpp  delta_time.hpp  main.cpp  scene.hpp  timezones.pini  typelist.hpp  types.hpp
src/gfx/: factory.cpp  factory.hpp  follow_eye.cpp  follow_eye.hpp  orient.hpp  shape.hpp
src/maths/: maths.hpp
src/world_clock/: gui.cpp  gui.hpp  io.hpp  world_clock.hpp  world_hour.hpp
